--- a/result-service.yaml
+++ b/result-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service 
 metadata:
-  name: db
+  name: result-service
   labels:
     name: result-service
     app: demo-voting-app
