--- a/result-app-pod.yml
+++ b/result-app-pod.yml
@@ -8,7 +8,7 @@ metadata:
 spec:
   containers:
     - name: result-app
-      image: dockersamples/examplevotingapp_result
+      image: dockersamples/examplevotingapp_result:before
       ports:
         - containerPort: 80
         
