--- a/voting-app-pod.yaml
+++ b/voting-app-pod.yaml
@@ -8,6 +8,6 @@ metadata:
 spec:
   containers:
     - name: voting-app
-      image: dockersamples/examplevotingapp_vote
+      image: dockersamples/examplevotingapp_vote:before
       ports:
         - containerPort: 80   
